First version of process monitor + required utility classes